Removing HTML Editor

--- a/src/components/editor/editor.css
+++ b/src/components/editor/editor.css
@@ -45,6 +45,7 @@ body {
   height: 100%;
   color: #b7bbc8;
   padding-left: 5px;
+  padding-top: 5px;
   padding-bottom: 1000px;
   position: relative;
 }
@@ -56,5 +57,5 @@ body {
 }
 
 iframe {
-    border: 1;
+    border: 0;
 }
